add comments for swagger, rename handle Pay to Add
