# service/internal/http/balance/add.go
@@ -11,6 +11,17 @@ import (
 	"user_balance/service/internal/vo"
 )
 
+// @Summary Add
+// @Tags balance
+// @Description Add user balance
+// @Accept json
+// @Produce json
+// @Param input body models.Transaction true "payload"
+// @Success 200 {object} models.Out
+// @Failure 400 {object} models.Out
+// @Failure 403 {object} models.Out
+// @Failure 500 {object} models.Out
+// @Router /balance/add [post]
 func (u *balance) Add(w http.ResponseWriter, r *http.Request) {
 	bodyBytes, err := ioutil.ReadAll(r.Body)
 	if err != nil {
